Bug 241993 - REGRESSION (iOS 16): 2 finger click with trackpad does not select editable text if context menu is already shown
Summary: REGRESSION (iOS 16): 2 finger click with trackpad does not select editable te...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-24 18:44 PDT by Wenson Hsieh
Modified: 2022-06-25 14:05 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-06-24 18:44:11 PDT
rdar://93638100
Comment 1 Wenson Hsieh 2022-06-25 10:22:35 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1802
Comment 2 EWS 2022-06-25 14:05:33 PDT
Committed 251855@main (596af8195ab5): <https://commits.webkit.org/251855@main>

Reviewed commits have been landed. Closing PR #1802 and removing active labels.